--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.11.2",
     "history": "^5.0.0",
     "materialize-css": "^1.0.0-rc.2",
+    "node-sass": "^4.14.1",
     "pusher-js": "^7.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
