--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "emoji-picker-react": "^3.4.4",
     "history": "^5.0.0",
     "materialize-css": "^1.0.0-rc.2",
     "node-sass": "^4.14.1",
