--- a/package.json
+++ b/package.json
@@ -15,15 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "config": "^3.3.3",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-validator": "^6.9.2",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.16",
-    "pusher": "^4.0.2",
-    "shortid": "^2.2.16"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
