--- a/client/package.json
+++ b/client/package.json
@@ -2,12 +2,12 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "author": "Oleksii Kalinin",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "emoji-picker-react": "^3.4.4",
     "history": "^5.0.0",
-    "jimp": "^0.16.1",
     "materialize-css": "^1.0.0-rc.2",
     "node-sass": "^4.14.1",
     "pusher-js": "^7.0.3",
