--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\" "
   },
   "keywords": [],
-  "author": "",
+  "author": "Oleksii Kalinin",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
